compile.log
/main.cpp: In function ‘int main()’:
/main.cpp:129:17: error: ‘strcpy’ was not declared in this scope
                 strcpy(command, i);
                 ^~~~~~
/main.cpp:129:17: note: ‘strcpy’ is defined in header ‘<cstring>’; did you forget to ‘#include <cstring>’?
/main.cpp:6:1:
+#include <cstring>
 
/main.cpp:129:17:
                 strcpy(command, i);
                 ^~~~~~